--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,151 @@
-/* место для вашего кода */
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 92px 24px 96px;
+}
+
+.header__menu {
+  width: 391.48px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+
+.header__links-list {
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  text-decoration: underline;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  flex-grow: 0;
+}
+
+.header__logo-image {
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  font-style: normal;
+  width: 237px;
+}
+
+.cover {
+  width: 100%;
+  height: 757px;
+  background-image: url(/images/cover.jpg);
+  background-size: cover;
+}
+
+.lots {
+  padding: 179px 24px 0;
+}
+
+.lots__heading {
+  padding-left: 40px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 25px;
+  flex-direction: row;
+  justify-content: space-between;
+  list-style: none;
+  margin-top: 27px;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  height: 563px;
+}
+
+.card__title {
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-align: left;
+}
+
+.card__text {
+  font-family: Raleway;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;  
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+}
+
+.about {
+  padding: 146px 24px 0;
+}
+
+.about__logo-image {
+  width: 240px;
+  height: 240px;
+}
+
+.footer {
+  padding: 180px 50px 88px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+}
+
+.footer__menu-link {
+  text-decoration: underline;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  width: 240px;
+  height: 48px;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
