--- a/styles/style.css
+++ b/styles/style.css
@@ -64,10 +64,109 @@
 }
 
 .cover {
+  z-index: -1;
+  position: relative;
   width: 100%;
   height: 757px;
   background-image: url(/images/cover.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* .overlay {
+  z-index: 0;
+  position: absolute;
+  width: 1100px;
+  height: 757px;
+  gap: 0px;
+  opacity: 0.3;
+} */
+
+.cover__title {
+  display: flex;
+  flex-direction: column;
+  padding: 165px 50px 0;
+  gap: 20px;
+}
+
+h1 {
+  font-size: 100px;
+  font-weight: 700;
+  line-height: 100px;
+  letter-spacing: 0.3em;
+  color: white;
+  text-transform: uppercase;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.aligned-text {
+  text-align: left;
+  line-height: 115px;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 0.6em;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  padding: 135px 50px 51px 78px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cover__description-text {
+  font-size: 22px;
+  line-height: 28px;
+  text-align: left;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 0;
+}
+
+.space-80 {
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0.7em;
+}
+
+.space-90 {
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0.9em;
+}
+
+.space-110 {
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 1.1em;
+}
+
+.bet-button {
+  width: 256px;
+  height: 51px;
+  text-transform: uppercase;
+  color: white;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 25.83px;
+  text-align: center;
+  background-color: transparent;
+  border: 1px solid white;
 }
 
 .lots {
