--- a/styles/style.css
+++ b/styles/style.css
@@ -64,8 +64,6 @@
 }
 
 .cover {
-  z-index: -1;
-  position: relative;
   width: 100%;
   height: 757px;
   background-image: url(/images/cover.jpg);
@@ -73,14 +71,8 @@
   background-repeat: no-repeat;
 }
 
-/* .overlay {
-  z-index: 0;
-  position: absolute;
-  width: 1100px;
-  height: 757px;
-  gap: 0px;
-  opacity: 0.3;
-} */
+/* .overlay {  TODO 
+}  */
 
 .cover__title {
   display: flex;
@@ -182,6 +174,30 @@ h1 {
   text-transform: uppercase;
 }
 
+.card_type_film {
+  width: 100%;
+  height: 757px;
+  background-image: url(/images/card-lot-01.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_book {
+  width: 100%;
+  height: 757px;
+  background-image: url(/images/card-lot-02.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_picture {
+  width: 100%;
+  height: 757px;
+  background-image: url(/images/card-lot-03.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .lots__card-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -195,26 +211,40 @@ h1 {
 
 .lots__card-list-item {
   height: 563px;
+  padding: 51px 40px 48px;
+}
+
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .card__title {
-  font-family: Raleway;
   font-size: 22px;
-  font-weight: 700;
+  font-weight: bold;
   line-height: 26.4px;
   text-align: left;
+  text-transform: uppercase;
+  text-decoration: underline;
+  color: white;
 }
 
 .card__text {
-  font-family: Raleway;
   font-size: 20px;
-  font-weight: 400;
   line-height: 24px;
   text-align: left;
+  color: white;
+  justify-self: flex-end;
 }
 
 .lots__look-more-link {
   margin-left: 40px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  text-align: left;
 }
 
 .about {
