--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@ h1 {
   margin-block-start: 0;
   margin-block-end: 0;
   color: white;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 100px;
   line-height: 100px;
   letter-spacing: 0.3em;
@@ -177,7 +177,7 @@ h1 {
 
 .lots__heading {
   padding-left: 40px;
-  font-weight: 700;
+  font-weight: bold;
   font-size: 40px;
   text-align: left;
   text-transform: uppercase;
@@ -255,7 +255,6 @@ h1 {
 
 .lots__look-more-link {
   margin-left: 40px;
-  font-weight: 400;
   font-size: 20px;
   text-align: left;
   text-decoration: underline;
