--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
   z-index: 0;
   width: 100%;
   min-height: 757px;
-  background-image: url(./images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -171,15 +171,15 @@ h1 {
 }
 
 .card_type_film {
-  background-image: url(./images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(./images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background-image: url(./images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .lots__card-list-item {
@@ -187,6 +187,9 @@ h1 {
   min-height: 563px;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  z-index: 0;
+  padding: 51px 40px 48px;
 }
 
 .lots__card-list {
@@ -198,12 +201,6 @@ h1 {
   margin-top: 27px;
   margin-bottom: 30px;
   list-style: none;
-}
-
-.lots__card-list-item {
-  position: relative;
-  z-index: 0;
-  padding: 51px 40px 48px;
 }
 
 .card {
