--- a/styles/style.css
+++ b/styles/style.css
@@ -87,21 +87,20 @@
 }
 
 .cover__title {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
   padding: 165px 50px 0;
 }
 
 h1 {
-  margin-block-start: 0;
-  margin-block-end: 0;
   color: white;
   font-weight: bold;
   font-size: 100px;
   line-height: 100px;
   letter-spacing: 0.3em;
   text-transform: uppercase;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .aligned-text {
