Add grid-row-gap for more cards

--- a/styles/style.css
+++ b/styles/style.css
@@ -204,6 +204,7 @@ h1 {
   flex-direction: row;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 25px;
+  grid-row-gap: 25px;
   justify-content: space-between;
   margin-top: 27px;
   margin-bottom: 30px;
